v1.5.3 'projects carousel horizontal scroll fixed'

--- a/src/components/pages/style.css
+++ b/src/components/pages/style.css
@@ -76,11 +76,11 @@ section{
     flex-wrap: wrap;
     justify-content: center;
    
-    gap: 10px;
+
 }
 
 .images img{
-    max-width: 100%;
+    max-width: 50%;
 
     border-radius: 10px;
     filter: drop-shadow(#000 10px 10px 5px);
